tests/extensions/forLoops/semanticErr/forBadCondition.wacc
# error -> i > 'a'

# Output:
# semantic_error

# Exit:
# 200

begin
  for (int i = 0; i < 'a'; i = i + 1) do
    skip
  done
end